--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <P>メイン要素（見出し、本文、画像などの主要な内容）が入ります</p>
         <h2>画像拡大</h2>
 <div class="expansion">
-  <a href="#"><img src="images/画像.jpg" alt="画像"></a>
+  <a href="#"><img src="images/sample.jpg" alt="sample"></a>
 </div>
     </main>
     <footer> 
